--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
         <meta charset="utf-8">
         <script type="text/javascript" src="js/main.js"></script>
     </head>
-    <body>
+    <body onload="load()">
         <h1>Minha página</h1>
+        <button type="button" onclick="clicar()">Clique aqui!</button>
+        <p id = "agradecimento" onclick="redirecionar()"></p>
+        <br>
+        <p onmouseover="trocar(this)" onmouseout="voltar(this)">Passe o mouse aqui!</p>
+        <br>
+        <p onmouseover="trocar(this)" onmouseout="voltar(this)">Passe o mouse aqui!</p>
+        <select onchange="functionChange(this)">
+            <option value="1">Valor 1</option>
+            <option value="2">Valor 2</option>
+            <option value="3">Valor 3</option>
+        </select>
     </body>
 </html>
